[metadata]
name = mblog
summary = Markdown Blog Server
description-file =
    README.rst
author = winglq@gmail.com
home-page = http://www.liuqing.site
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]

[entry_points]
